--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,51 @@
     transform: rotate(360deg);
   }
 }
+.App {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.box {
+  margin: auto;
+  max-width: 27rem;
+  display: grid;
+  gap: 2rem;
+}
+
+input[type="file"] {
+  display: none;
+}
+label,
+button {
+  padding: 1.5rem 2rem;
+  cursor: pointer;
+}
+code {
+  display: grid;
+  gap: 4px;
+  padding: 1rem;
+  background-color: #000;
+}
+
+.output-item {
+  display: flex;
+  gap: 0.4rem;
+  font-family: monospace;
+  font-size: 14px;
+  color: #fff;
+}
+.output-item > *:first-child {
+  font-weight: 800;
+  color: #6aab17;
+}
+
+label {
+  display: inline-block;
+  background-color: #f2f2f2;
+}
+button {
+  background-color: #6aab17;
+  border: none;
+}
